tests/errors/program_without_line_04.f90
print *, "OK"
2 + 2
end
